--- a/main.html
+++ b/main.html
@@ -4,9 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Movie page</title>
 </head>
 
 <body>
+	<img src="https://c8.alamy.com/comp/2JDPRG6/rapunzel-tangled-2010-2JDPRG6.jpg" alt="Movie Poster" class="moviePic">
+    
+    <p class="movieDetail">
+        This is a fascinating movie about adventure and discovery. Follow the protagonist as they navigate through challenges, uncover secrets, and find themselves in an unexpected journey. A must-watch for all movie lovers!
+    </p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
